Add missing translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -468,7 +468,11 @@
 	"pastanaga.calendar.years": "Anys",
 	"pastanaga.cancel": "Cancel·lar",
 	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.a-few-seconds-ago": "Ara mateix",
 	"pastanaga.datetime.at": "a",
+	"pastanaga.datetime.minutesAgo": "Fa {{minutes}} min",
+	"pastanaga.datetime.one-minute-ago": "fa 1 min",
+	"pastanaga.datetime.yesterday": "Ahir",
 	"profile.change_password": "Canviar contrasenya",
 	"profile.edit": "Editant el perfil de: ",
 	"profile.fill_data": "Configura les teves dades abans de començar a descobrir coneixement!",
