--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -472,7 +472,11 @@
 	"pastanaga.calendar.years": "Years",
 	"pastanaga.cancel": "Cancel",
 	"pastanaga.confirm": "Confirm",
+	"pastanaga.datetime.a-few-seconds-ago": "Just now",
 	"pastanaga.datetime.at": "at",
+	"pastanaga.datetime.minutesAgo": "{{minutes}} min ago",
+	"pastanaga.datetime.one-minute-ago": "1 min ago",
+	"pastanaga.datetime.yesterday": "Yesterday",
 	"profile.change_password": "Reset password",
 	"profile.edit": "Editing profile from: ",
 	"profile.fill_data": "Add content and discover what Nuclia can do!",
