--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -468,7 +468,11 @@
 	"pastanaga.calendar.years": "Años",
 	"pastanaga.cancel": "Cancelar",
 	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.a-few-seconds-ago": "Justo ahora",
 	"pastanaga.datetime.at": "a",
+	"pastanaga.datetime.minutesAgo": "Hace {{minutes}} minutos",
+	"pastanaga.datetime.one-minute-ago": "Hace 1 minuto",
+	"pastanaga.datetime.yesterday": "Ayer",
 	"profile.change_password": "Cambiar contraseña",
 	"profile.edit": "Editando el perfil de: ",
 	"profile.fill_data": "Por favor,  configura tus datos antes de empezar a descubrir conocimiento",
