--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -465,7 +465,11 @@
 	"pastanaga.calendar.years": "Années",
 	"pastanaga.cancel": "Annuler",
 	"pastanaga.confirm": "Confirmer",
+	"pastanaga.datetime.a-few-seconds-ago": "Maintenant",
 	"pastanaga.datetime.at": "à",
+	"pastanaga.datetime.minutesAgo": "Il y a {{minutes}} minutes",
+	"pastanaga.datetime.one-minute-ago": "il y a 1 minute",
+	"pastanaga.datetime.yesterday": "Hier",
 	"profile.change_password": "Réinitialiser le mot de passe",
 	"profile.edit": "Modification du profil à partir de :",
 	"profile.fill_data": "Ajoutez du contenu et découvrez ce que Nuclia peut faire !",
