[sc-6667] Implement cancel subscription

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -24,14 +24,8 @@
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
-	"account.delete.defer_delete": "Suprimeix el meu compte quan finalitzi la meva subscripció.",
-	"account.delete.delete_immediately": "Elimina el meu compte immediatament.",
-	"account.delete.delete_user": "Eliminar el meu usuari",
-	"account.delete.deletion_scheduled": "Se ha programado la eliminación de su cuenta.",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
-	"account.delete.expiration": "La teva subscripció caduca el",
 	"account.delete.go_to": "Si vols eliminar el teu compte, si us plau ves a",
-	"account.delete.keep_user": "Mantenir el meu usuari",
 	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
 	"account.delete.subscription_detected": "S'ha detectat una subscripció activa",
 	"account.delete_account": "Eliminar compte",
@@ -131,6 +125,7 @@
 	"billing.budget_calculator_help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.budget_warning": "El sobreconsum actual es facturarà aquest mes.<br>\nLa modificació del pressupost entrará en vigor el mes següent.",
+	"billing.cancel-renewal": "Cancel·la la renovació de la teva subscripció.",
 	"billing.card_details": "Detalls de la targeta",
 	"billing.card_name": "Titular de la targeta",
 	"billing.city": "Ciutat",
@@ -141,8 +136,13 @@
 	"billing.cost_over_limits": "Cost al superar els límits",
 	"billing.cost_over_limits_description": "Si supereu els límits del nivell de pagament, s'aplicarà el cost per ús.",
 	"billing.country": "País",
+	"billing.current-over-cost": "Sobrecost actual",
+	"billing.current-over-cost-help": "La factura amb els sobrecostos definitius s'enviarà el dia que finalitzi el cicle de facturació.",
 	"billing.custom_plan": "Pla personalitzat",
+	"billing.delete-warning": "El vostre compte s'eliminarà permanentment set dies després que finalitzi el cicle de facturació.",
 	"billing.email": "Factures enviades a",
+	"billing.end-service": "Finalitza el teu servei",
+	"billing.end-subscription": "Finalitzar la subscripció",
 	"billing.enterprise_ready": "Llest par a l'empresa",
 	"billing.estimate_cost": "Estima el teu cost",
 	"billing.extra_paragraphs_cost": "Si es supera el límit de paràgrafs emmagatzemats, es cobrarà {{preu}} per cada paràgraf addicional.",
@@ -176,6 +176,8 @@
 	"billing.month": "Mes",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.monthly_estimation.title": "S'estima que el sobreconsum tindrà un cost de",
+	"billing.my-subscription": "La meva subscripció",
+	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
 	"billing.order_number": "Número de comanda",
 	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 paràgrafs",
@@ -193,14 +195,15 @@
 	"billing.phone": "Número de telèfon",
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Còdi postal",
-	"billing.quotas.answers": "Resposta generativa",
 	"billing.quotas.files": "Nombre màxim de fitxers",
 	"billing.quotas.files-up-to": "Arxius fins a",
+	"billing.quotas.generative": "Resposta generativa",
 	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de caixes de coneixement",
-	"billing.quotas.medias": "Indexació de vídeo i àudio",
-	"billing.quotas.paragraphs": "Número de paràgrafs",
-	"billing.quotas.paragraphs_stored": "Paràgrafs emmagatzemats",
+	"billing.quotas.media": "Indexació de vídeo i àudio",
+	"billing.quotas.paragraphs": "Paràgrafs emmagatzemats",
+	"billing.quotas.paragraphs_processed": "Número de paràgrafs",
+	"billing.quotas.predict": "Prediccions",
 	"billing.quotas.search_inference": "Cerca / Inferència",
 	"billing.quotas.searches": "Recerques",
 	"billing.quotas.storage": "Emmagatzematge",
@@ -208,6 +211,8 @@
 	"billing.quotas.training": "Entrenament",
 	"billing.quotas.up-to": "Fins a",
 	"billing.quotas_label": "Quotes mensuals",
+	"billing.reactivate": "Reactivar",
+	"billing.renew-subscription": "Renovar la subscripció",
 	"billing.review.confirm_subscription": "Confirma la teva subscripció",
 	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
 	"billing.review.subscribe_to": "T'estàs subscribint a {{account}}",
@@ -220,12 +225,18 @@
 	"billing.subscribed": "Subscrit",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.title": "Nivells de subscripció",
+	"billing.subscription-end": "La teva subscripció finalitzarà el",
+	"billing.subscription-ended": "Has finalitzat la teva subscripció a Nuclia",
+	"billing.subscription-renewed": "Has renovat la teva subscripció a Nuclia",
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
 	"billing.tier": "Nivell",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
+	"billing.unsubscribe-error": "Error en cancel·lar la subscripció",
+	"billing.unsubscribe-help": "Encara que deixis de renovar la teva subscripció, encara pots utilitzar Nuclia durant un temps.",
+	"billing.unsubscribe-title": "No s'ha acabat fins que s'ha acabat de veritat...",
 	"billing.upgrade": "Actualitzar",
 	"billing.upgrade_now": "Actualitzar ara",
 	"billing.usage.consumables": "Consumibles",
@@ -262,9 +273,7 @@
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
 	"error.reprocessing-resources": "S'ha produït un error en el reprocessament de {{count}} recursos",
-	"farewell.response_submitted": "S'ha enviat la teva resposta.",
 	"farewell.see_again": "Esperem tornar-te a veure.",
-	"farewell.thanks_time": "Gràcies pel teu temps!",
 	"farewell.thanks_trust": "Gràcies per la teva confiança!",
 	"features.customize_features": "Personalitzar funcionalitats",
 	"feedback.anything_else": "¿Algo más que quieras compartir? (Opcional)",
