--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -24,14 +24,8 @@
 	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
-	"account.delete.defer_delete": "Delete my account when my subscription ends.",
-	"account.delete.delete_immediately": "Delete my account immediately.",
-	"account.delete.delete_user": "Delete my user",
-	"account.delete.deletion_scheduled": "Deletion of your account has been scheduled.",
 	"account.delete.error": "Error when deleting the account",
-	"account.delete.expiration": "Your subscription expires on",
 	"account.delete.go_to": "If you want to delete your account, please go to",
-	"account.delete.keep_user": "Keep my user",
 	"account.delete.keep_user_title": "Would you like to keep your user profile?",
 	"account.delete.subscription_detected": "Active subscription detected",
 	"account.delete_account": "Delete account",
@@ -134,7 +128,7 @@
 	"billing.budget_calculator_help": "The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
-	"billing.cancel_subscription.description": "Sometimes you just need to call it quits. We get it.",
+	"billing.cancel-renewal": "Cancel the renewal of your active subscription.",
 	"billing.card_details": "Card details",
 	"billing.card_name": "Name on card",
 	"billing.city": "City",
@@ -145,8 +139,13 @@
 	"billing.cost_over_limits": "Cost over limits",
 	"billing.cost_over_limits_description": "If you exceed the limits on the payment tiers, the cost per usage will be applied",
 	"billing.country": "Country",
+	"billing.current-over-cost": "Current over cost",
+	"billing.current-over-cost-help": "The invoice with final over costs will be sent to you on the day your billing cycle ends.",
 	"billing.custom_plan": "Custom plan",
+	"billing.delete-warning": "Your account will be permanently deleted seven days after the billing cycle ends.",
 	"billing.email": "Invoices sent to",
+	"billing.end-service": "End your service",
+	"billing.end-subscription": "End subscription",
 	"billing.enterprise_ready": "We are enterprise ready",
 	"billing.estimate_cost": "Estimate your cost",
 	"billing.extra_paragraphs_cost": "If the stored paragraph limit included is exceeded, we will charge {{price}} /stored paragraph.",
@@ -180,6 +179,8 @@
 	"billing.month": "Month",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
 	"billing.monthly_estimation.title": "Overconsumption is estimated to cost",
+	"billing.my-subscription": "My subscription",
+	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
 	"billing.order_number": "Order number",
 	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 paragraphs",
@@ -197,14 +198,15 @@
 	"billing.phone": "Phone number",
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
-	"billing.quotas.answers": "Generative answer",
 	"billing.quotas.files": "Maximum number of files",
 	"billing.quotas.files-up-to": "Files up to",
+	"billing.quotas.generative": "Generative answer",
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Number of knowledge boxes",
-	"billing.quotas.medias": "Video & audio indexing ",
-	"billing.quotas.paragraphs": "Number of paragraph",
-	"billing.quotas.paragraphs_stored": "Paragraph stored",
+	"billing.quotas.media": "Video & audio indexing ",
+	"billing.quotas.paragraphs": "Paragraph stored",
+	"billing.quotas.paragraphs_processed": "Number of paragraph",
+	"billing.quotas.predict": "Predicts",
 	"billing.quotas.search_inference": "Search / Inference",
 	"billing.quotas.searches": "Searches",
 	"billing.quotas.storage": "Storage",
@@ -212,6 +214,8 @@
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
 	"billing.quotas_label": "Monthly quotas",
+	"billing.reactivate": "Reactivate",
+	"billing.renew-subscription": "Renew subscription",
 	"billing.review.confirm_subscription": "Confirm your subscription",
 	"billing.review.cost": "Monthly {{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
 	"billing.review.subscribe_to": "Subscribing to {{account}}",
@@ -224,12 +228,18 @@
 	"billing.subscribed": "Subscribed",
 	"billing.subscription.country": "Select the billing country",
 	"billing.subscription.title": "Subscription tiers",
+	"billing.subscription-end": "Your subscription will end on",
+	"billing.subscription-ended": "You ended your subscription to Nuclia",
+	"billing.subscription-renewed": "You renewed your subscription to Nuclia",
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
 	"billing.tier": "Tier",
 	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
+	"billing.unsubscribe-error": "Error when unsubscribing",
+	"billing.unsubscribe-help": "Don’t forget: even if you stop renewing your subscription, you still have some time left to use Nuclia.",
+	"billing.unsubscribe-title": "It's not over until it's truly over...",
 	"billing.upgrade": "Upgrade",
 	"billing.upgrade_now": "Upgrade now",
 	"billing.usage.consumables": "Consumables",
@@ -266,9 +276,7 @@
 	"error.deleting-resources": "Deletion failed for {{count}} resources",
 	"error.reprocessing-resource": "Reprocessing the resource failed",
 	"error.reprocessing-resources": "Reprocessing failed for {{count}} resources",
-	"farewell.response_submitted": "Your response has been submitted.",
 	"farewell.see_again": "We hope to see you again.",
-	"farewell.thanks_time": "Thank you for your time!",
 	"farewell.thanks_trust": "Thank you for your trust!",
 	"features.customize_features": "Customize features",
 	"feedback.anything_else": "Anything else you want to share? (Optional)",
