--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -24,14 +24,8 @@
 	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
-	"account.delete.defer_delete": "Eliminar mi cuenta cuando finalice mi suscripción.",
-	"account.delete.delete_immediately": "Eliminar mi cuenta inmediatamente.",
-	"account.delete.delete_user": "Eliminar mi usuario",
-	"account.delete.deletion_scheduled": "S'ha programat la supressió del vostre compte.",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
-	"account.delete.expiration": "Tu suscripción caduca el",
 	"account.delete.go_to": "Si quieres eliminar tu cuenta, por favor ve a",
-	"account.delete.keep_user": "Mantener mi usuario",
 	"account.delete.keep_user_title": "¿Quieres mantener tu perfil de usuario?",
 	"account.delete.subscription_detected": "Suscripción activa detectada",
 	"account.delete_account": "Eliminar cuenta",
@@ -131,6 +125,7 @@
 	"billing.budget_calculator_help": "La calculadora de presupuesto te permite hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.budget_warning": "El sobreconsumo actual se facturará este mes.<br>\nEl cambio de presupuesto entrará en vigencia el próximo mes.",
+	"billing.cancel-renewal": "Cancelar la renovación de tu suscripción.",
 	"billing.card_details": "Detalles de la tarjeta",
 	"billing.card_name": "Titular de la tarjeta",
 	"billing.city": "Ciudad",
@@ -141,8 +136,13 @@
 	"billing.cost_over_limits": "Coste al exceder los límites",
 	"billing.cost_over_limits_description": "Si excede los límites del nivel de pago, se aplicará el costo por uso.",
 	"billing.country": "País",
+	"billing.current-over-cost": "Sobrecoste actual",
+	"billing.current-over-cost-help": "La factura con los sobrecostes definitivos se te enviará el día que finalice tu ciclo de facturación.",
 	"billing.custom_plan": "Plan personalizado",
+	"billing.delete-warning": "Su cuenta se eliminará permanentemente siete días después de que finalice el ciclo de facturación.",
 	"billing.email": "Facturas enviadas a",
+	"billing.end-service": "Finaliza tu servicio",
+	"billing.end-subscription": "Finalizar la suscripción",
 	"billing.enterprise_ready": "Listo para la empresa",
 	"billing.estimate_cost": "Estima tu coste",
 	"billing.extra_paragraphs_cost": "Si se excede el límite de párrafos almacenados, se cobrarà {{price}} por cada párrafo adicional.",
@@ -176,6 +176,8 @@
 	"billing.month": "Mes",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.monthly_estimation.title": "Se estima que el sobreconsumo costará",
+	"billing.my-subscription": "Mi suscripción",
+	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
 	"billing.order_number": "Número de pedido",
 	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 párrafos",
@@ -193,14 +195,15 @@
 	"billing.phone": "Número de teléfono",
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "Código postal",
-	"billing.quotas.answers": "Respuesta generativa",
 	"billing.quotas.files": "Cantidad máxima de archivos",
 	"billing.quotas.files-up-to": "Archivos hasta",
+	"billing.quotas.generative": "Respuesta generativa",
 	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de cajas de conocimiento",
-	"billing.quotas.medias": "Indexación de video y audio",
-	"billing.quotas.paragraphs": "Número de parrafos",
-	"billing.quotas.paragraphs_stored": "Parrafos almacenados",
+	"billing.quotas.media": "Indexación de video y audio",
+	"billing.quotas.paragraphs": "Parrafos almacenados",
+	"billing.quotas.paragraphs_processed": "Número de parrafos",
+	"billing.quotas.predict": "Predicciones",
 	"billing.quotas.search_inference": "Búsqueda / Inferencia",
 	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.storage": "Almacenamiento",
@@ -208,6 +211,8 @@
 	"billing.quotas.training": "Entrenamiento",
 	"billing.quotas.up-to": "Hasta",
 	"billing.quotas_label": "Cuotas mensuales",
+	"billing.reactivate": "Reactivar",
+	"billing.renew-subscription": "Renovar la suscripción",
 	"billing.review.confirm_subscription": "Confirma tu suscripción",
 	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
 	"billing.review.subscribe_to": "Te estás suscribiendo a {{account}}",
@@ -220,12 +225,18 @@
 	"billing.subscribed": "Suscrito",
 	"billing.subscription.country": "Seleccione el país de facturación",
 	"billing.subscription.title": "Niveles de subscripción",
+	"billing.subscription-end": "Tu suscripción finalizará el",
+	"billing.subscription-ended": "Has finalizado tu suscripción a Nuclia",
+	"billing.subscription-renewed": "Has renovado tu suscripción a Nuclia",
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
 	"billing.tier": "Nivel",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
+	"billing.unsubscribe-error": "Error al cancelar la suscripción",
+	"billing.unsubscribe-help": "Aunque dejes de renovar tu suscripción, todavía puedes utilizar Nuclia durante un tiempo.",
+	"billing.unsubscribe-title": "No se acaba hasta que realmente se acaba...",
 	"billing.upgrade": "Actualizar",
 	"billing.upgrade_now": "Actualizar ahora",
 	"billing.usage.consumables": "Consumibles",
@@ -262,9 +273,7 @@
 	"error.deleting-resources": "Error al eliminar {{count}} recursos",
 	"error.reprocessing-resource": "Error al reprocesar el recurso",
 	"error.reprocessing-resources": "Error de reprocesamiento de {{count}} recursos",
-	"farewell.response_submitted": "Tu respuesta ha sido enviada.",
 	"farewell.see_again": "Esperamos verte de nuevo.",
-	"farewell.thanks_time": "¡Gracias por tu tiempo!",
 	"farewell.thanks_trust": "¡Gracias por tu confianza!",
 	"features.customize_features": "Personalizar funcionalidades",
 	"feedback.anything_else": "Alguna cosa més que vulguis compartir? (Opcional)",
