--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -24,14 +24,8 @@
 	"account.day_left": "1 jour restant",
 	"account.days_left": " Il reste{{days}} jours",
 	"account.db_zone_description": "Sélectionnez la zone et le fournisseur de services de traitement que vous souhaitez utiliser pour ce compte (la zone du compte est sélectionnée par défaut).",
-	"account.delete.defer_delete": "Supprimer mon compte à la fin de mon abonnement.",
-	"account.delete.delete_immediately": "Supprimez mon compte immédiatement.",
-	"account.delete.delete_user": "Supprimer mon utilisateur",
-	"account.delete.deletion_scheduled": "La suppression de votre compte a été programmée.",
 	"account.delete.error": "Erreur lors de la suppression du compte",
-	"account.delete.expiration": "Votre abonnement expire le",
 	"account.delete.go_to": "Si vous souhaitez supprimer votre compte, veuillez vous rendre à l'adresse suivante",
-	"account.delete.keep_user": "Garder mon utilisateur",
 	"account.delete.keep_user_title": "Vous souhaitez conserver votre profil d'utilisateur ?",
 	"account.delete.subscription_detected": "Abonnement actif détecté",
 	"account.delete_account": "Supprimer un compte",
@@ -131,7 +125,7 @@
 	"billing.budget_calculator_help": "Le calculateur de budget vous permettra d'établir un budget mensuel en fonction de vos besoins spécifiques.",
 	"billing.budget_description": "Pour éviter de dépenser trop en consommables mensuels, nous vous recommandons de fixer une limite économique mensuelle.<br> Le fait de ne pas définir de limite peut entraîner des frais inattendus pour toute consommation dépassant le montant alloué.",
 	"billing.budget_warning": "La surconsommation actuelle sera facturée ce mois-ci.<br>Le changement budgétaire entrera en vigueur le mois prochain.",
-	"billing.cancel_subscription.description": "Parfois, il suffit d’arrêter. Nous avons compris.",
+	"billing.cancel-renewal": "Annulez le renouvellement de votre abonnement.",
 	"billing.card_details": "Détails de la carte",
 	"billing.card_name": "Nom sur carte",
 	"billing.city": "Ville",
@@ -142,8 +136,13 @@
 	"billing.cost_over_limits": "Coût dépassant les limites",
 	"billing.cost_over_limits_description": "Si vous dépassez les limites des niveaux de paiement, le coût par utilisation sera appliqué",
 	"billing.country": "Pays",
+	"billing.current-over-cost": "Surcoût actuel",
+	"billing.current-over-cost-help": "La facture avec les surcoûts finaux vous sera envoyée le jour de la fin de votre cycle de facturation.",
 	"billing.custom_plan": "Forfait personnalisé",
+	"billing.delete-warning": "Votre compte sera définitivement supprimé sept jours après la fin du cycle de facturation.",
 	"billing.email": "Factures envoyées à",
+	"billing.end-service": "Mettre fin à votre service",
+	"billing.end-subscription": "Mettre fin à l'abonnement",
 	"billing.enterprise_ready": "Nous sommes prêts pour l'entreprise",
 	"billing.estimate_cost": "Estimez votre coût",
 	"billing.extra_paragraphs_cost": "Si la limite de paragraphes stockés incluse est dépassée, nous facturerons {{price}} /paragraphe stocké.",
@@ -177,6 +176,8 @@
 	"billing.month": "Mois",
 	"billing.monthly_estimation.description": "Le coût estimé fourni est basé sur les valeurs définies et est susceptible de changer si ces valeurs sont modifiées.",
 	"billing.monthly_estimation.title": "On estime que la surconsommation coûte",
+	"billing.my-subscription": "Mon abonnement",
+	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
 	"billing.order_number": "Numéro de commande",
 	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 paragraphes",
@@ -194,14 +195,15 @@
 	"billing.phone": "Numéro de téléphone",
 	"billing.phone_placeholder": "par exemple. +34 000 000 000",
 	"billing.postal_code": "Zip *: français",
-	"billing.quotas.answers": "Réponse générative",
 	"billing.quotas.files": "Nombre maximum de fichiers",
 	"billing.quotas.files-up-to": "Fichiers jusqu'à",
+	"billing.quotas.generative": "Réponse générative",
 	"billing.quotas.ingestion": "Ingestion",
 	"billing.quotas.kbs": "Nombre de boîtes de connaissances",
-	"billing.quotas.medias": "Indexation vidéo et audio",
-	"billing.quotas.paragraphs": "Nombre de paragraphe",
-	"billing.quotas.paragraphs_stored": "Paragraphe stocké",
+	"billing.quotas.media": "Indexation vidéo et audio",
+	"billing.quotas.paragraphs": "Paragraphe stocké",
+	"billing.quotas.paragraphs_processed": "Nombre de paragraphe",
+	"billing.quotas.predict": "Prédictions",
 	"billing.quotas.search_inference": "Recherche / Inférence",
 	"billing.quotas.searches": "Recherches",
 	"billing.quotas.storage": "Espace de rangement",
@@ -209,6 +211,8 @@
 	"billing.quotas.training": "Entraînement",
 	"billing.quotas.up-to": "Jusqu'à",
 	"billing.quotas_label": "Quotas mensuels",
+	"billing.reactivate": "Réactiver",
+	"billing.renew-subscription": "Renouveler l'abonnement",
 	"billing.review.confirm_subscription": "Confirmez votre abonnement",
 	"billing.review.cost": "Abonnement mensuel {{cost}} + frais de consommation avec une restriction budgétaire mensuelle de {{budget}}",
 	"billing.review.subscribe_to": "S'abonner à {{account}}",
@@ -221,12 +225,18 @@
 	"billing.subscribed": "Souscrit",
 	"billing.subscription.country": "Sélectionnez le pays de facturation",
 	"billing.subscription.title": "Niveaux d'abonnement",
+	"billing.subscription-end": "Votre abonnement prendra fin le",
+	"billing.subscription-ended": "Vous avez mis fin à votre abonnement à Nuclia",
+	"billing.subscription-renewed": "Vous avez renouvelé votre abonnement à Nuclia",
 	"billing.subscription_tier": "Niveau d'abonnement",
 	"billing.success": "Inscription réussie",
 	"billing.tier": "Étage",
 	"billing.tier_select.help": "Chaque niveau a des quotas différents. Sélectionnez un niveau pour obtenir une compréhension plus précise des coûts de consommation.",
 	"billing.trial.title": "{{days}}  jours d'essai",
 	"billing.unit": "Unité",
+	"billing.unsubscribe-error": "Erreur lors de l'annulation de l'abonnement",
+	"billing.unsubscribe-help": "N’oubliez pas: même si vous arrêtez de renouveler votre abonnement, il vous reste encore du temps pour utiliser Nuclia.",
+	"billing.unsubscribe-title": "Ce n'est pas fini tant que ce n'est pas vraiment fini...",
 	"billing.upgrade": "Améliorer",
 	"billing.upgrade_now": "Mettre à jour maintenant",
 	"billing.usage.consumables": "Consommables",
@@ -263,9 +273,7 @@
 	"error.deleting-resources": "La suppression a échoué pour {{count}}  ressources",
 	"error.reprocessing-resource": "Le retraitement de la ressource a échoué",
 	"error.reprocessing-resources": "Le retraitement a échoué pour {{count}} ressources",
-	"farewell.response_submitted": "Votre réponse a été soumise.",
 	"farewell.see_again": "Nous espérons vous revoir bientôt.",
-	"farewell.thanks_time": "Merci pour votre temps!",
 	"farewell.thanks_trust": "Merci pour ta confiance!",
 	"features.customize_features": "Personnaliser les fonctionnalités",
 	"feedback.anything_else": "Quelque chose d'autre que vous souhaitez partager? (Facultatif)",
