move actions out of entities list for perf reasons

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -458,11 +458,11 @@
 	"ner-family-dialog.upload-csv-button": "Seleccioneu CSV",
 	"ner-family-dialog.upload-csv-format": "Format CSV esperat: una columna amb una entitat anomenada per fila.",
 	"ner-family-dialog.upload-csv-title": "Carregueu un fitxer CSV",
-	"ner-family-toolbar.add-button": "Afegeix NER",
+	"ner-family-toolbar.add-button": "Afegeix NER a la família",
 	"ner-family-toolbar.edit-button": "Edita la família NER",
 	"ner-family-toolbar.remove-button": "Suprimeix la família NER",
-	"ner-list.add-duplicate-tooltip": "Afegeix com a duplicat de",
-	"ner-list.delete-entity-tooltip": "Suprimeix l'entitat",
+	"ner-list.add-duplicate-tooltip": "Marca com a duplicat de",
+	"ner-list.delete-entity-tooltip": "Suprimeix el NER seleccionat",
 	"ner-list.duplicates": "Duplicats",
 	"ner-list.duplicates-of": "Duplicats de",
 	"ner-list.remove-duplicate-tooltip": "Sortiu dels duplicats",
