--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -454,11 +454,11 @@
 	"ner-family-dialog.upload-csv-button": "Sélectionnez CSV",
 	"ner-family-dialog.upload-csv-format": "Format CSV attendu : une colonne avec une entité nommée par ligne.",
 	"ner-family-dialog.upload-csv-title": "Téléchargez un fichier CSV",
-	"ner-family-toolbar.add-button": "Ajouter NER",
+	"ner-family-toolbar.add-button": "Ajouter NER à la famille",
 	"ner-family-toolbar.edit-button": "Modifier la famille NER",
 	"ner-family-toolbar.remove-button": "Supprimer la famille NER",
-	"ner-list.add-duplicate-tooltip": "Ajouter comme doublon de",
-	"ner-list.delete-entity-tooltip": "Supprimer l'entité",
+	"ner-list.add-duplicate-tooltip": "Marquer comme doublons de",
+	"ner-list.delete-entity-tooltip": "Supprimer le NER sélectionné",
 	"ner-list.duplicates": "Doublons",
 	"ner-list.duplicates-of": "Doublons de",
 	"ner-list.remove-duplicate-tooltip": "Sortir des doublons",
